# CatraMMS

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  api.cfg  copy.sh  mms.cfg  prepareApacheDocumentRoot.sh  setTag.sh  updateAndRestartApache2.sh  version.txt
API/src/: API.cpp  API.fcgi  API.h  APICommon.cpp  APICommon.h  APICommonNotUsed.cpp  APICommonNotUsed.h  API_Configuration.cpp  API_DeliveryAuthorization.cpp  API_DeliveryServer.cpp  API_EncodersPool.cpp  API_Encoding.cpp  API_Ingestion.cpp  API_Invoice.cpp  API_MediaItem.cpp  API_Statistic.cpp  API_UserWorkspace.cpp  API_WorkflowLibrary.cpp  AddSilentAudio.cpp  AddSilentAudio.h  BandwidthStats.cpp  BandwidthStats.h  Binary.cpp  Binary.fcgi  Binary.h  CMakeLists.txt  CutFrameAccurate.cpp  CutFrameAccurate.h  DeliveryServerBandwidthUsageThread.cpp  DeliveryServerBandwidthUsageThread.h  DeliveryServerCPUUsageThread.cpp  DeliveryServerCPUUsageThread.h  EncodeContent.cpp  EncodeContent.h  FFMPEGEncoder.cpp  FFMPEGEncoder.h  FFMPEGEncoderBase.cpp  FFMPEGEncoderBase.h  FFMPEGEncoderDaemons.cpp  FFMPEGEncoderDaemons.h  (+33 more)
CMSEngine/src/: ActiveEncodingsManager.cpp  ActiveEncodingsManager.h  CMSEngine.cpp  CMSEngine.h  CMSEngineDBFacade.cpp  CMSEngineDBFacade.h  CMSEngineProcessor.cpp  CMSEngineProcessor.h  CMSStorage.cpp  CMSStorage.h  CMakeLists.txt  CheckIngestionTimes.cpp  CheckIngestionTimes.h  Customer.h  Customers.cpp  Customers.h  EncoderVideoAudioProxy.cpp  EncoderVideoAudioProxy.h  EncodingItem.h  EncodingsManager.cpp  EncodingsManager.h  cmsEngine.cpp
CMSEngineService/src/: CMSEngineProcessor.cpp  CMSEngineProcessor.h  CMakeLists.txt  CheckEncodingTimes.cpp  CheckEncodingTimes.h  CheckIngestionTimes.cpp  CheckIngestionTimes.h  Customers.h  GenerateImageToIngestEvent.h  IngestAssetEvent.h  LocalAssetIngestionEvent.h  cmsEngineService.cpp
CMSRepository/src/: CMSRepository.cpp  CMSRepository.h  CMSRepositoryErrors.cpp  CMSRepositoryErrors.h  CMSRepositoryMessages.cpp  CMSRepositoryMessages.h  CMakeLists.txt
FFMPEGEncoder/src/: AddSilentAudio.cpp  AddSilentAudio.h  CMakeLists.txt  CutFrameAccurate.cpp  CutFrameAccurate.h  EncodeContent.cpp  EncodeContent.h  EncoderBandwidthUsageThread.cpp  EncoderBandwidthUsageThread.h  EncoderCPUUsageThread.cpp  EncoderCPUUsageThread.h  FFMPEGEncoder.cpp  FFMPEGEncoder.h  FFMPEGEncoderBase.cpp  FFMPEGEncoderBase.h  FFMPEGEncoderDaemons.cpp  FFMPEGEncoderDaemons.h  FFMPEGEncoderTask.cpp  FFMPEGEncoderTask.h  GenerateFrames.cpp  GenerateFrames.h  IntroOutroOverlay.cpp  IntroOutroOverlay.h  LiveGrid.cpp  LiveGrid.h  LiveProxy.cpp  LiveProxy.h  LiveRecorder.cpp  LiveRecorder.h  LiveRecorderDaemons.cpp  LiveRecorderDaemons.h  OverlayImageOnVideo.cpp  OverlayImageOnVideo.h  OverlayTextOnVideo.cpp  OverlayTextOnVideo.h  PictureInPicture.cpp  PictureInPicture.h  SlideShow.cpp  SlideShow.h  VideoSpeed.cpp  (+3 more)
FFMpeg/src/: CMakeLists.txt  ChangeFileFormat.cpp  ConcatCutMuxSplit.cpp  EncodeContent.cpp  FFMpeg.cpp  FFMpeg.h  FFMpegEncodingParameters.cpp  FFMpegEncodingParameters.h  FFMpegFilters.cpp  FFMpegFilters.h  FFMpeg_ChangeFileFormat.cpp  FFMpeg_ConcatCutMuxSplit.cpp  FFMpeg_EncodeContent.cpp  FFMpeg_Frames.cpp  FFMpeg_Incrontab.cpp  FFMpeg_IntroOutroOverlay.cpp  FFMpeg_LiveGrid.cpp  FFMpeg_LiveProxy.cpp  FFMpeg_LiveRecorder.cpp  FFMpeg_MediaInfo.cpp  FFMpeg_Monitoring.cpp  FFMpeg_Overlay.cpp  FFMpeg_PictureInPicture.cpp  FFMpeg_SilentAudio.cpp  FFMpeg_SlideShow.cpp  FFMpeg_StreamingToFile.cpp  FFMpeg_VideoSpeed.cpp  FFMpeg_Youtube.cpp  Frames.cpp  Incrontab.cpp  IntroOutroOverlay.cpp  LiveGrid.cpp  LiveProxy.cpp  LiveRecorder.cpp  MMSCURL.cpp  MMSCURL.h  MediaInfo.cpp  Monitoring.cpp  Overlay.cpp  PictureInPicture.cpp  (+4 more)
FastCGIAPI/src/: CMakeLists.txt  Compressor.cpp  Compressor.h  FastCGIAPI.cpp  FastCGIAPI.h
MMSDelivery/src/: CMakeLists.txt  HostBandwidthTracker.cpp  HostBandwidthTracker.h  MMSDeliveryAuthorization.cpp  MMSDeliveryAuthorization.h
MMSEngine/src/: AWSSigner.cpp  AWSSigner.h  ActiveEncodingsManager.cpp  ActiveEncodingsManager.h  CMakeLists.txt  CheckedMySqlConnection.cpp  CheckedMySqlConnection.h  EMailSender.cpp  EMailSender.h  EncoderProxy.cpp  EncoderProxy.h  EncoderProxy_AWS.cpp  EncoderProxy_Content.cpp  EncoderProxy_FaceIdentification.cpp  EncoderProxy_FaceRecognition.cpp  EncoderProxy_Image.cpp  EncoderProxy_LiveProxy.cpp  EncoderProxy_LiveRecorder.cpp  EncoderProxy_Process.cpp  EncoderVideoAudioProxy.cpp  EncoderVideoAudioProxy.h  EncodersLoadBalancer.cpp  EncodersLoadBalancer.h  JSONUtils.cpp  JSONUtils.h  LocalAssetIngestionEvent.h  MMSCURL.cpp  MMSCURL.h  MMSDeliveryAuthorization.cpp  MMSDeliveryAuthorization.h  MMSEngine.cpp  MMSEngine.h  MMSEngineDBFacade.cpp  MMSEngineDBFacade.h  MMSEngineDBFacade_Configuration.cpp  MMSEngineDBFacade_ConfigurationOutputType_Postgres.cpp  MMSEngineDBFacade_ConfigurationSocial_Postgres.cpp  (+44 more)
MMSUtility/src/: MMSCURL.h  (+8 more)
maintenanceEmails/: CMakeLists.txt  maintenanceAnnuncio-2023-10-12.html  maintenanceAnnuncio-2024-11-22.html  maintenanceAnnuncio-2024-12-04.html  maintenanceAnnuncio-2025-01-22-2.html  maintenanceAnnuncio-2025-01-22.html  maintenanceAnnuncio.html  maintenanceComandi.txt  maintenanceCompleted-2023-10-12.html  maintenanceCompleted.html
scripts/: CMakeLists.txt  addCustomer.sh  api.rsi.sh  api.sh  backup-storage-loop.sh  backupStorage.sh  backupStorageLoop.sh  checkConsistencyFileSystem-Database.sh  checkStatistics.sh  cibortv.sh  cibortvStartChannelsAutoLoop.sh  cibortvStartChannelsManualLoop.sh  copyDBDataWorkspace.sql  copyFileOnAllServers.sh  crontab.rsi.sh  crontab.sh  deleteStatisticsWhoseDatesAreClose.sh  deploy.sh  deployCatraMMS.sh  encoder.rsi.sh  encoder.sh  ffmpegHelper.sh  genIncrontabForMMSLive.sh  getIngestionsToBeManaged.sh  imageMagickHelper.sh  incronServiceCheck.sh  incrontab.sh  ingestionThroughChunks.sh  installServer.sh  loopServicesStatus.sh  micro-service-deploy.sh  micro-service.sh  mmsApi.rsi.lab.sh  mmsApi.rsi.mms2.sh  mmsApi.sh  mmsCloudLoop-crontab.sh  mmsCloudLoop.sh  mmsDelivery.sh  mmsEncoder.rsi.lab.sh  mmsEncoder.rsi.mms2.sh  (+44 more)
ttfFont/: CMakeLists.txt  info.txt
(+1027 files in other folders)
